<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lc.MainActivity"
    android:background="@mipmap/laundrybin"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_border"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="110dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_edittext"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="58dp"
            android:layout_marginRight="58dp"
            android:hint="Email"
            android:textSize="18dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:maxLines="1"
            android:inputType="text"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_edittext"
            android:hint="@string/pass_hint"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="58dp"
            android:layout_marginRight="58dp"
            android:textSize="18dp"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:maxLines="1"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:text="@string/log_in"
            android:background="@drawable/round_button"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:layout_marginLeft="58dp"
            android:layout_marginRight="58dp"
            android:layout_marginBottom="15dp"
            />
    </LinearLayout>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="26dp"
        android:text="OR"
        android:textColor="@color/black"
        android:textSize="14dp"
        android:textStyle="bold"
        />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="26dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />
</FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_border"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="26dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mno_edittext"
                android:hint="Enter mobile number"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="58dp"
                android:layout_marginRight="58dp"
                android:textSize="18dp"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:maxLines="1"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_forward_black_24dp"
                android:layout_gravity="right"
                android:layout_marginRight="37dp"
                android:layout_marginTop="21dp"
                android:id="@+id/mobnobtn"
                />
        </FrameLayout>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/otp_edittext"
                android:hint="Enter OTP"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="58dp"
                android:layout_marginRight="58dp"
                android:textSize="18dp"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:maxLines="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginPno_button"
            android:text="@string/log_in"
            android:background="@drawable/round_button"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:layout_marginLeft="58dp"
            android:layout_marginRight="58dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerText"
            android:text="@string/registerText"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/error_textview"
            android:text="@string/error_message"
            android:textColor="@color/red"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textSize="15dp"
            android:visibility="gone"
            />
    </LinearLayout>
